# my_project_1

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
quotes/: admin.py  forms.py  models.py  urls.py  views.py
quotes/migrations/: 0001_initial.py  0002_category_quote_category.py  0003_alter_quote_category.py  0004_alter_quote_category.py  0005_quote_likes.py  0006_favorite.py
quotes/templates/quotes/: add_quote.html  add_to_favorites.html  like_quote.html  random_quote.html  random_quote_by_category.html  recommended_quotes.html
templates/: add_quote.html  add_to_favorites.html  like_quote.html  random_quote.html  random_quote_by_category.html  recommended_quotes.html
