[tool.poetry]
name = "my-project-1"
version = "0.1.0"
description = ""
authors = ["vivid <jeajun18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
